<resources>
    <string name="app_name">CoviDist</string>
    <string name="Headline">Welcome to</string>
    <string name="PersonalBtn">Personal Menu</string>
    <string name="FamilyBtn">Family Menu</string>
    <string name="CurrentLocationTxt">Current Location</string>
    <string name="UpdateDistTxt">Update Distance</string>
    <string name="SetHomeTxt">Set Home Location</string>
    <string name="AddMemberTxt">Add Family Member</string>
    <string name="DeleteMemberTxt">Delete Family Member</string>
    <string name="FindMemberTxt">Find Family Member</string>
    <string name="title_activity_map">Map</string>
    <string name="updateDistanceHint">Enter allowed distance</string>
    <string name="updateDistanceHeadline">Update Distance</string>
    <string name="updateBtn">Update</string>
    <string name="setHomeLocationHeadline">Set Home Location</string>
    <string name="chooseAddressHint">Please choose location from map.</string>
    <string name="chooseBtnText">Choose location from map</string>
    <string name="giveLocationToast">Please enable your location.</string>
    <string name="Cancel">Cancel</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Ok">Ok</string>
    <string name="PermissionGranted">Permission Granted</string>
    <string name="PermissionDenied">Permission Denied</string>
    <string name="allowPermissions">You need to allow access permissions</string>
    <string name="SignOutBtn">Sign Out</string>
    <string name="FacebookApplicationID" translatable="false">533469320941314</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb533469320941314</string>
    <string name="facebook_application_id" translatable="false">533469320941314</string>
    <string name="title_activity_choose_location_map" translatable="false">Map</string>
    <string name="chooseLocationMsg">Do you want to choose this location?</string>
    <string name="chooseSnackBtn">Choose</string>
    <string name="CHANNEL_ID" translatable="false">First Channel</string>
    <string name="notificationTitle">Location Deviation Alert!</string>
    <string name="notificationText">You are to far away! Please get closer to home!!!</string>
    <string name="channel_name">Location Deviation</string>
    <string name="channel_description">Location deviation alerts</string>
</resources>
