<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignOutBtn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_margin="10dp"
        android:enabled="false"
        android:background="@drawable/btn_shape"
        android:layout_gravity="start|top"
        android:drawableEnd="@drawable/exit_icon"
        android:id="@+id/signOutBtn"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:text="@string/Headline"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:gravity="center_horizontal"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/PersonalBtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:drawableEnd="@drawable/personal_menu"
        android:id="@+id/personalMenu"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/FamilyBtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:drawableEnd="@drawable/family_menu"
        android:id="@+id/familyMenu"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/coronabackground"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"/>
</LinearLayout>