<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/world_map_carbon"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:text="@string/PersonalBtn"
        android:gravity="center_horizontal"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/SetHomeTxt"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:drawableEnd="@drawable/set_home"
        android:id="@+id/setHomeBtn"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/UpdateDistTxt"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:drawableEnd="@drawable/update_distance"
        android:id="@+id/updateDistanceBtn"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/CurrentLocationTxt"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:id="@+id/currentLocation"
        android:drawableEnd="@drawable/current_location"/>
</LinearLayout>