<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:text="@string/setHomeLocationHeadline"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_horizontal"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:hint="@string/enterAddressHint"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_shape"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/chooseBtnText"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:id="@+id/chooseBtn"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/updateBtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:id="@+id/updateBtn"/>
</LinearLayout>